--- a/assets/moremobs/lang/en_us.json
+++ b/assets/moremobs/lang/en_us.json
@@ -19,7 +19,7 @@
   "moremobs.midnightconfig.enable_additional_valuable_loot": " └ Add additional valuable loot",
   "moremobs.midnightconfig.enable_additional_valuable_loot.tooltip": "Default: §aYes§f\nThis includes for example Dragon Breath, Totem of Undying and Elytra",
   "moremobs.midnightconfig.enable_upside_down_spiders": "Enable upside down spiders",
-  "moremobs.midnightconfig.enable_upside_down_spiders.tooltip": "Default: §aYes§f\nIf enabled, spiders will turn upside down when hanging on ceilings",
+  "moremobs.midnightconfig.enable_upside_down_spiders.tooltip": "Default: §aYes§f\nIf enabled, spiders will turn upside down when hanging on ceilings\nOnly for versions below Minecraft 1.20.3",
   "moremobs.midnightconfig.enable_let_undead_mobs_burn_in_daylight": "Let mobs with custom heads burn in daylight",
   "moremobs.midnightconfig.enable_let_undead_mobs_burn_in_daylight.tooltip": "Default: §aYes§f\nIf enabled, undead mobs with custom heads will burn in the daylight\nOnly for Minecraft 1.19.4+",
 
